<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">AlarmOn</string>
  <string name="add_alarm">Add alarm</string>
  <string name="default_settings">Default Alarm Settings</string>
  <string name="app_settings">Settings</string>
  <string name="delete_all">Delete All</string>
  <string name="settings">Settings</string>
  <string name="time">Time</string>
  <string name="label">Label</string>
  <string name="alarm_label">Alarm label</string>
  <string name="none">None</string>
  <string name="repeat">Repeat</string>
  <string name="scheduled_days">Scheduled days</string>
  <string name="tone">Tone</string>
  <string name="alarm_tone">Alarm tone</string>
  <string name="snooze_minutes">Snooze (minutes)</string>
  <string name="vibrate">Vibrate</string>
  <string name="enabled">Enabled</string>
  <string name="disabled">Disabled</string>
  <string name="alarm_fade">Alarm volume fade</string>
  <string name="fade_description">From %1$d%% to %2$d%% over %3$d seconds.</string>
  <string name="unknown_name">Unknown name</string>
  <string name="volume_start">Start volume (percent)</string>
  <string name="volume_end">End volume (percent)</string>
  <string name="volume_duration">Fade duration (seconds)</string>
  <string name="ok">OK</string>
  <string name="cancel">Cancel</string>
  <string name="delete">Delete</string>
  <string name="confirm_delete">Confirm delete?</string>
  <string name="snooze">SNOOZE</string>
  <string name="dismiss">DISMISS</string>
  <string name="plus_five">+5</string>
  <string name="minus_five">-5</string>
  <string name="next_alarm">Next alarm:</string>
  <string name="no_pending_alarms">No pending alarms</string>
  <string name="alarm_has_occurred">Alarm has occurred</string>
  <string name="day">%d day</string>
  <string name="days">%d days</string>
  <string name="hour">%d hour</string>
  <string name="hours">%d hours</string>
  <string name="minute">%d minute</string>
  <string name="minutes">%d minutes</string>
  <string name="am">AM</string>
  <string name="pm">PM</string>
  <string name="dow_sun_short">Su</string>
  <string name="dow_mon_short">Mo</string>
  <string name="dow_tue_short">Tu</string>
  <string name="dow_wed_short">We</string>
  <string name="dow_thu_short">Th</string>
  <string name="dow_fri_short">Fr</string>
  <string name="dow_sat_short">Sa</string>
  <string name="dow_sun">Sunday</string>
  <string name="dow_mon">Monday</string>
  <string name="dow_tue">Tuesday</string>
  <string name="dow_wed">Wednesday</string>
  <string name="dow_thu">Thursday</string>
  <string name="dow_fri">Friday</string>
  <string name="dow_sat">Saturday</string>
  <string name="no_repeats">No repeats</string>
  <string name="everyday">Every day</string>
  <string name="weekdays">Weekdays</string>
  <string name="weekends">Weekends</string>
  <string name="debug_mode_title">Debug Mode</string>
  <string name="debug_mode_summary">Turn on various debugging features</string>
  <string name="debug_default">Default</string>
  <string name="debug_on">On</string>
  <string name="debug_off">Off</string>
  <string name="notification_icon_title">Display notification icon</string>
  <string name="notification_icon_on">Display an icon when there are pending alarms</string>
  <string name="notification_icon_off">Do not display an icon when there are pending alarms</string>
  <string name="lock_screen_title">Lock screen text</string>
  <string name="lock_screen_summary">Configure alarm information displayed on the lock screen</string>
  <string name="lock_screen_countdown">Countdown</string>
  <string name="lock_screen_time">Alarm time</string>
  <string name="lock_screen_both">Both</string>
  <string name="lock_screen_custom">Custom</string>
  <string name="lock_screen_nothing">Nothing</string>
  <string name="internal">Internal</string>
  <string name="artists">Artists</string>
  <string name="albums">Albums</string>
  <string name="songs">Songs</string>
  <string name="selected">Selected: </string>
  <string name="custom_lock_screen_text">Custom lock screen text</string>
  <string name="custom_lock_screen_description" formatted="false">This is the text that will display on the lock screen.  In your text, you may use the string %c to display the count down time and/or the string %t to display the alarm time.\nExample: Hello %t\nWould appear as: Hello 8:00 am\nIf the \'Persistent\' box is checked.  The string will remain on the lock screen even when no alarm is scheduled.</string>
  <string name="custom_lock_screen_persistent">Persistent</string>
  <string name="time_out_title">Alarm time out</string>
  <string name="time_out_error">WARNING: This alarm has timed out waiting for an acknowledgment.</string>
  <string name="time_out_summary">A firing alarm will be automatically dismissed after this many minutes.</string>
  <string name="pending_alarms">Pending Alarms</string>
  <string name="test_alarm">Test Alarm</string>
  <string name="app_theme_title">Appearance</string>
  <string name="app_theme_summary">Change the app colors</string>
  <string name="themes">Themes</string>
  <string name="dark">Dark</string>
  <string name="light">Light</string>
  <string name="dark_light">Dark Light</string>
  <string name="read_external_storage_title">Read files</string>
  <string name="read_external_storage_message">We need your permission to read your media files so you can set your own alarm tone.</string>
  <string name="grant">Grant</string>
  <string name="permission_not_granted">We are sorry, we cannot access this feature until you grant us permission.</string>
  <string name="permission_not_granted_title">Permission not granted</string>
  <string name="notification_text_title">Notification text</string>
  <string name="notification_text_summary">Configure alarm information displayed on the notification</string>
  <string name="custom_notification_text">Custom notification text</string>
  <string name="custom_notification_text_description" formatted="false">This is the text that will display on the notification. In your text, you may use the string ${c} to display the count down time and/or the string ${t} to display the alarm time.\nExample: Hello ${t}\nWould appear as: Hello 8:00 AM</string>
  <string name="time_picker_color_title">Time picker color</string>
  <string name="time_picker_color_summary">Select the color for the time picker.</string>
  <string name="red">Red</string>
  <string name="pink">Pink</string>
  <string name="purple">Purple</string>
  <string name="deep_purple">Deep Purple</string>
  <string name="indigo">Indigo</string>
  <string name="blue">Blue</string>
  <string name="light_blue">Light Blue</string>
  <string name="cyan">Cyan</string>
  <string name="teal">Teal</string>
  <string name="green">Green</string>
  <string name="light_green">Light Green</string>
  <string name="orange">Orange</string>
  <string name="deep_orange">Deep Orange</string>
  <string name="brown">Brown</string>
  <string name="grey">Grey</string>
  <string name="blue_grey">Blue Grey</string>
  <string name="about">About</string>
  <string name="settings_about_key">io.github.carlorodriguez.alarmon.ABOUT</string>
  <string name="selected_media">&#160;%1$s</string>
  <string name="volume_start_label">Start volume: %1$d%%</string>
  <string name="volume_end_label">End volume: %1$d%%</string>
  <string name="volume_duration_label">Duration: %1$d seconds</string>
  <string name="loading">Loading</string>
  <string name="please_wait">Please wait</string>
  <string name="alarm_deleted">Alarm deleted</string>
  <string name="undo">UNDO</string>
  <string name="swipe_right_to_delete">Hi There! Swipe right this card and see what happens.</string>
  <string name="material_intro_id_alarm_deletion">material_intro_id_119.104</string>
</resources>
